--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -1,5 +1,18 @@
 .get-started {
+  padding-left: 30px;
+  padding-right: 30px;
   text-align: center;
   font-size: 2rem;
-  
+}
+
+.get-started h1 {
+  font-size: 2.5rem;
+}
+
+.get-started h2 {
+  font-size: 2rem;
+}
+
+.get-started h3 {
+  font-size: 1.5rem;
 }
