--- a/src/styles/GetStarted.css
+++ b/src/styles/GetStarted.css
@@ -5,14 +5,18 @@
   font-size: 2rem;
 }
 
-.get-started h1 {
+.get-started > h1 {
   font-size: 2.5rem;
 }
 
-.get-started h2 {
+.get-started > h2 {
   font-size: 2rem;
 }
 
-.get-started h3 {
+.get-started > h3 {
   font-size: 1.5rem;
+}
+
+.get-started > .link {
+  text-decoration: none;
 }
